<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GrayScale_100">

    <include layout="@layout/titlebar_white" />
    <EditText
        android:id="@+id/et_vcode_email"
        android:layout_width="311dp"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="41dp"
        android:background="@drawable/standard_corner"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/retrieve_password_vcode_3"
        android:textSize="@dimen/sp_14"
        android:importantForAutofill="no"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vcode_title" />

    <TextView
        android:id="@+id/tv_vcode_title"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/retrieve_password_vcode_1"
        android:textColor="@color/GrayScale_0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1246" />

    <Button
        android:id="@+id/btn_vcode_jumptologin"
        android:layout_width="311dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/standard_button_gray"
        android:text="@string/retrieve_password_vcode_4"
        android:onClick="onClick"
        android:textColor="@color/GrayScale_100"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_vcode_email" />

    <TextView
        android:id="@+id/tv_vcode_sendtosomebody"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:text="@string/retrieve_password_vcode_2"
        android:textColor="@color/GrayScale_80"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/et_vcode_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vcode_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/btn_vcode_jumptologin"
        app:layout_constraintTop_toBottomOf="@+id/btn_vcode_jumptologin">

        <TextView
            android:id="@+id/tv_detailforest_new"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/retrieve_password_vcode_5"
            android:textColor="@color/GrayScale_80"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_vcode_time"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/retrieve_password_vcode_6"
            android:textColor="@color/HH_Reminder_Link"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/retrieve_password_vcode_7"
            android:textColor="@color/GrayScale_80"
            android:textSize="14sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>