<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/titlebar_white" />
    <EditText
        android:id="@+id/EditText"
        android:layout_width="311dp"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="41dp"
        android:background="@drawable/standard_corner"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/retrieve_password_forget_2"
        android:importantForAutofill="no"
        android:inputType="none"
        android:maxLength="10"
        android:textCursorDrawable="@drawable/standard_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:text="@string/retrieve_password_forget_3"
        android:textColor="@color/GrayScale_20"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/EditText"
        app:layout_constraintEnd_toEndOf="@+id/EditText"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="@+id/EditText"
        app:layout_constraintTop_toTopOf="@+id/EditText"
        app:layout_constraintVertical_bias="0.5" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="170dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_5"
        android:textColor="@color/HH_Reminder_Warning"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/retrieve_password_forget_6"
        android:onClick="onClick"
        android:textColor="@color/HH_Reminder_Link"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/retrieve_password_forget_1"
        android:textColor="@color/GrayScale_0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1246" />

    <Button
        android:id="@+id/button4"
        android:layout_width="311dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/standard_button_gray"
        android:text="@string/retrieve_password_forget_4"
        android:onClick="onClick"
        android:textColor="@color/GrayScale_100"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/retrieve_password_forget_7"
        android:textColor="@color/GrayScale_80"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

</androidx.constraintlayout.widget.ConstraintLayout>