<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/titlebar_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/EditText"
        android:layout_width="@dimen/dp_311"
        android:layout_height="@dimen/dp_56"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_41"
        android:background="@drawable/standard_corner"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/register_2"
        android:importantForAutofill="no"
        android:maxLength="10"
        android:inputType="none"
        android:textCursorDrawable="@drawable/standard_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_20"
        android:text="@string/register_3"
        android:textColor="@color/GrayScale_20"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/EditText"
        app:layout_constraintEnd_toEndOf="@+id/EditText"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="@+id/EditText"
        app:layout_constraintTop_toTopOf="@+id/EditText"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/register_6"
        android:onClick="onClick"
        android:textColor="@color/HH_Reminder_Link"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/EditText1"
        app:layout_constraintTop_toBottomOf="@+id/EditText1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/register_5"
        android:textColor="@color/HH_Reminder_Warning"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/EditText1"
        app:layout_constraintTop_toBottomOf="@+id/EditText1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/register_7"
        android:onClick="onClick"
        android:textColor="@color/HH_Reminder_Link"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/EditText1"
        app:layout_constraintTop_toBottomOf="@+id/EditText1" />

    <EditText
        android:id="@+id/EditText1"
        android:layout_width="@dimen/dp_311"
        android:layout_height="@dimen/dp_56"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/standard_corner"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/register_4"
        android:importantForAutofill="no"
        android:inputType="none"
        android:textCursorDrawable="@drawable/standard_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_26"
        android:text="@string/register_1"
        android:textColor="@color/GrayScale_0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1246" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/dp_311"
        android:layout_height="@dimen/dp_56"
        android:layout_marginTop="@dimen/dp_70"
        android:background="@drawable/standard_button_gray"
        android:text="@string/register_8"
        android:onClick="onClick"
        android:textColor="@color/GrayScale_100"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/EditText1"
        app:layout_constraintTop_toBottomOf="@+id/EditText1" />


</androidx.constraintlayout.widget.ConstraintLayout>